更改获取用户ip方式为调用第三方jsonp

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <noscript>
       <strong>We're sorry but blog-person doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script> <!-- 搜狐接口,请求本地ip(jsonp形式) -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
